# GitHub-Checker

./: .env.example  .env_example  .gitignore  .pre-commit-config.yaml  .pydocstyle  Makefile  Pipfile  README.md  pyproject.toml
bot/: __init__.py  __main__.py  client.py  main.py  notification.py  settings.py  translation.py
bot/handlers/: __init__.py  help.py  language.py  list.py  start.py  track.py  untrack.py
bot/locale/en_US.UTF-8/LC_MESSAGES/: bot.po
docs/: bot.rst  conf.py  index.rst  scrapper.rst
scrapper/: __init__.py  __main__.py  check_github.py  client.py  main.py  models.py  reader.py  settings.py  utils.py  writer.py
tests/: test_extract_owner_repo.py  test_github_checker.py  test_list_handler.py  test_models.py  test_track_handler.py
